# CoLM

./: .gitignore  CoLM_Code_Analysis.md  Makefile  Makefile.deps  config.f90  config.mk  mpifort.help  nvidia_alter.md  run.sh
cmake/: CMakeLists.txt  README_CMAKE.md
cudamain/: CoLMDRIVER.F90  MOD_CoLMMAIN_CUDA.F90
cudamain_bak/: CoLMDRIVER_CUDA.F90  MOD_Aerosol_CUDA.F90  MOD_Albedo_CUDA.F90  MOD_AllocatableVars_CUDA.F90  MOD_AssimStomataConductance_CUDA.F90  MOD_CanopyLayerProfile_CUDA.F90  MOD_ConstVars_CUDA.F90  MOD_Eroot_CUDA.F90  MOD_FrictionVelocity_CUDA.F90  MOD_GroundFluxes_CUDA.F90  MOD_GroundTemperature_CUDA.F90  MOD_Hydro_SoilFunction_CUDA.F90  MOD_Hydro_VIC_CUDA.F90  MOD_Hydro_VIC_Variables_CUDA.F90  MOD_Init_CUDA.F90  MOD_Lake_CUDA.F90  MOD_LeafInterception_CUDA.F90  MOD_LeafTemperature_CUDA.F90  MOD_NetSolar_CUDA.F90  MOD_NewSnow_CUDA.F90  MOD_OrbCoszen_CUDA.F90  MOD_Ozone_CUDA.F90  MOD_PhaseChange_CUDA.F90  MOD_PlantHydraulic_CUDA.F90  MOD_Qsadv_CUDA.F90  MOD_RainSnowTemp_CUDA.F90  MOD_Runoff_CUDA.F90  MOD_SPMD_Task_CUDA.F90  MOD_SnowFraction_CUDA.F90  MOD_SnowLayersCombineDivide_CUDA.F90  MOD_SnowSnicar_CUDA.F90  MOD_SoilSnowHydrology_CUDA.F90  MOD_SoilSurfaceResistance_CUDA.F90  MOD_SoilThermalParameters_CUDA.F90  MOD_Thermal_CUDA.F90  MOD_TurbulenceLEddy_CUDA.F90  MOD_Utils_CUDA.F90  MOD_Utils_CUDA_bak.F90  MOD_WetBulb_CUDA.F90
docs/superpowers/specs/: 2026-04-17-colm-dependency-analysis-design.md
include/: Makeoptions  Makeoptions.cuda  Makeoptions.gnu  Makeoptions.nvidia  define.h
main/: CoLM.F90  CoLMDRIVER.F90  MOD_3DCanopyRadiation.F90  MOD_Vars_1DFluxes.F90
main/URBAN/: MOD_Urban_Longwave.F90  MOD_Urban_Shortwave.F90
mksrfdata/: Aggregation_TopographyFactors.F90
run/: GreaterBay_Grid_Test.nml
run/forcing/: ERA5.nml
